--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ footer .social-icons a img:hover { filter: grayscale(0%); opacity: 1; }
     </div>
 
     <div class="header-right">
-        <a href="#" class="contact-btn">Contact</a>
+        <a href="https://wa.me/+6281237207282" class="contact-btn">Contact</a>
     </div>
 </header>
 
@@ -150,21 +150,18 @@ Saya juga pernah menjabat sebagai Kepala Divisi UI/UX dalam proyek Website Perpu
     <div class="projects-container">
 
         <div class="project-card">
-            <img src="20250810_171734.jpg" alt="Project 1">
+            <img src="gambar/WhatsApp Image 2025-12-08 at 21.07.15.jpeg" alt="Project 1">
             <h4>Desain UI/UX Streaming Musik</h4>
-            <a href="https://link-proyek1.com" class="btn-project">View →</a>
         </div>
 
         <div class="project-card">
-            <img src="20250810_171734.jpg" alt="Project 2">
+            <img src="gambar/WhatsApp Image 2025-12-08 at 21.06.59.jpeg" alt="Project 2">
             <h4>Website Perpustakaan RPL</h4>
-            <a href="https://link-proyek2.com" class="btn-project">View →</a>
         </div>
 
         <div class="project-card">
-            <img src="20250810_171734.jpg" alt="Project 3">
+            <img src="gambar/WhatsApp Image 2025-12-08 at 21.07.00.jpeg" alt="Project 3">
             <h4>UI/UX Prototipe E-Commerce</h4>
-            <a href="https://link-proyek3.com" class="btn-project">View →</a>
         </div>
 
     </div>
@@ -188,7 +185,7 @@ Saya juga pernah menjabat sebagai Kepala Divisi UI/UX dalam proyek Website Perpu
             <img src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png">
         </a>
 
-        <a href="https://github.com/" target="_blank">
+        <a href="https://github.com/SatriaHendraaa?tab=repositories" target="_blank">
             <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png">
         </a>
 
@@ -196,7 +193,7 @@ Saya juga pernah menjabat sebagai Kepala Divisi UI/UX dalam proyek Website Perpu
             <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png">
         </a>
 
-        <a href="https://instagram.com/" target="_blank">
+        <a href="https://www.instagram.com/satria_hendraaa?igsh=MXVtbmEzczdnOHZ3aw==" target="_blank">
             <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
         </a>
 
